chat-service integration